// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lulu interior HTML — frozen rendering inputs (default path) > N=3: assembled HTML matches the frozen snapshot 1`] = `
"
    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  ">
      <div style="text-align: center; max-width: 70%;">
        <p style="font-family: 'Excalifont', cursive, sans-serif; font-size: 32px; color: #1a1a1a; line-height: 1.4; margin: 0 0 0.15in 0;">
        This book was made<br>especially for
      </p>
      <p style="font-family: 'Excalifont', cursive, sans-serif; font-size: 52px; color: #F76C5E; line-height: 1.3; margin: 0; font-weight: bold;">
        Kai
      </p>
      </div>
      <img
        src="https://res.cloudinary.com/storywink/image/upload/v1772291377/Screenshot_2026-02-28_at_10.58.09_PM_gnknk5.png"
        alt="Storywink mascot"
        style="
          position: absolute;
          bottom: 0.5in;
          right: 0.5in;
          height: 15%;
          width: auto;
          object-fit: contain;
        "
      />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 1</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-1.png" alt="Page 1 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 2</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-2.png" alt="Page 2 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 3</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-3.png" alt="Page 3 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  ">
      <div style="text-align: center; max-width: 70%;">
        <p style="
          font-family: 'Excalifont', cursive, sans-serif;
          font-size: 42px;
          color: #1a1a1a;
          line-height: 1.3;
          margin: 0 0 0.2in 0;
          font-weight: bold;
        ">The End</p>
        <p style="
          font-family: 'Excalifont', cursive, sans-serif;
          font-size: 28px;
          color: #1a1a1a;
          line-height: 1.4;
          margin: 0 0 0.1in 0;
        ">Until next time,</p>
        <p style="
          font-family: 'Excalifont', cursive, sans-serif;
          font-size: 48px;
          color: #F76C5E;
          line-height: 1.3;
          margin: 0;
          font-weight: bold;
        ">Kai!</p>
      </div>
      <img
        src="https://res.cloudinary.com/storywink/image/upload/v1772291378/Screenshot_2026-02-28_at_10.57.54_PM_sxcasb.png"
        alt="Storywink mascot"
        style="
          margin-top: 0.4in;
          height: 15%;
          width: auto;
          object-fit: contain;
        "
      />
    </div>
  "
`;

exports[`Lulu interior HTML — frozen rendering inputs (default path) > N=10: assembled HTML matches the frozen snapshot 1`] = `
"
    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  ">
      <div style="text-align: center; max-width: 70%;">
        <p style="font-family: 'Excalifont', cursive, sans-serif; font-size: 32px; color: #1a1a1a; line-height: 1.4; margin: 0 0 0.15in 0;">
        This book was made<br>especially for
      </p>
      <p style="font-family: 'Excalifont', cursive, sans-serif; font-size: 52px; color: #F76C5E; line-height: 1.3; margin: 0; font-weight: bold;">
        Kai
      </p>
      </div>
      <img
        src="https://res.cloudinary.com/storywink/image/upload/v1772291377/Screenshot_2026-02-28_at_10.58.09_PM_gnknk5.png"
        alt="Storywink mascot"
        style="
          position: absolute;
          bottom: 0.5in;
          right: 0.5in;
          height: 15%;
          width: auto;
          object-fit: contain;
        "
      />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 1</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-1.png" alt="Page 1 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 2</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-2.png" alt="Page 2 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 3</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-3.png" alt="Page 3 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 4</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-4.png" alt="Page 4 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 5</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-5.png" alt="Page 5 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 6</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-6.png" alt="Page 6 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 7</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-7.png" alt="Page 7 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 8</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-8.png" alt="Page 8 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 9</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-9.png" alt="Page 9 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  ">
      <p style="
    font-family: 'Andika', sans-serif;
    font-size: 36px;
    color: #1a1a1a;
    text-align: center;
    line-height: 1.5;
    max-width: 70%;
    word-wrap: break-word;
    word-break: normal;
  ">Story text 10</p>
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
  ">
      <img src="https://res.cloudinary.com/storywink/image/upload/f_jpg,q_auto:best/v1/page-10.png" alt="Page 10 Illustration" style="
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
  " />
    </div>
  

    <div class="page" style="
    width: 8.75in;
    height: 8.75in;
    position: relative;
    overflow: hidden;
    page-break-after: always;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  ">
      <div style="text-align: center; max-width: 70%;">
        <p style="
          font-family: 'Excalifont', cursive, sans-serif;
          font-size: 42px;
          color: #1a1a1a;
          line-height: 1.3;
          margin: 0 0 0.2in 0;
          font-weight: bold;
        ">The End</p>
        <p style="
          font-family: 'Excalifont', cursive, sans-serif;
          font-size: 28px;
          color: #1a1a1a;
          line-height: 1.4;
          margin: 0 0 0.1in 0;
        ">Until next time,</p>
        <p style="
          font-family: 'Excalifont', cursive, sans-serif;
          font-size: 48px;
          color: #F76C5E;
          line-height: 1.3;
          margin: 0;
          font-weight: bold;
        ">Kai!</p>
      </div>
      <img
        src="https://res.cloudinary.com/storywink/image/upload/v1772291378/Screenshot_2026-02-28_at_10.57.54_PM_sxcasb.png"
        alt="Storywink mascot"
        style="
          margin-top: 0.4in;
          height: 15%;
          width: auto;
          object-fit: contain;
        "
      />
    </div>
  
<div class="page" style="
    width: 8.75in;
    height: 8.75in;
    page-break-after: always;
    background-color: white;
  "></div>
<div class="page" style="
    width: 8.75in;
    height: 8.75in;
    page-break-after: always;
    background-color: white;
  "></div>"
`;
